--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="" />
+    <link rel="icon" href="public/favico.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FitMap</title>
   </head>
